--- a/src/components/HomeExperience.css
+++ b/src/components/HomeExperience.css
@@ -1,10 +1,11 @@
 h1 {
     padding: 10px 10px;
+    
 }
 
 .cards {
     padding: 2rem 0rem  2rem 0;
-    background-image: linear-gradient(#09D8C4, #fff, #222F6D);
+    background-image: linear-gradient(#222F6D, #fff);
     border-radius: 15px;
     border-radius: 1.5rem;
     background-color: var(--background-dark);
