--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -28,4 +28,9 @@
     font-size: 20px;
   }
 
- 
+  .dot {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    display: inline-block;
+  }
